--- a/package.json
+++ b/package.json
@@ -4,6 +4,18 @@
   "main": "index.js",
   "author": "<alyssoncolombo@outlook.com>",
   "license": "MIT",
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "eslint",
+      "prettier --write"
+    ],
+    "*.js": "eslint --cache --fix"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
     "@types/wkhtmltopdf": "^0.3.9",
     "dotenv": "^16.4.5",
@@ -14,13 +26,26 @@
     "typeorm": "^0.3.20",
     "typescript": "^5.7.2",
     "uuid": "^11.0.3",
-    "wkhtmltopdf": "^0.4.0"
+    "wkhtmltopdf": "^0.4.0",
+    "cors": "^2.8.5",
+    "tslint-eslint-rules": "^5.4.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
     "@types/uuid": "^10.0.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "@types/cors": "^2.8.12",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.0"
   },
   "scripts": {
     "dev": "ts-node-dev src/app.ts"
