--- a/package.json
+++ b/package.json
@@ -18,24 +18,23 @@
   },
   "dependencies": {
     "@types/wkhtmltopdf": "^0.3.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
+    "tslint-eslint-rules": "^5.4.0",
     "typeorm": "^0.3.20",
     "typescript": "^5.7.2",
     "uuid": "^11.0.3",
-    "wkhtmltopdf": "^0.4.0",
-    "cors": "^2.8.5",
-    "tslint-eslint-rules": "^5.4.0"
+    "wkhtmltopdf": "^0.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
     "@types/uuid": "^10.0.0",
-    "ts-node-dev": "^2.0.0",
-    "@types/cors": "^2.8.12",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "eslint": "^8.0.1",
@@ -45,7 +44,10 @@
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0"
+    "eslint-plugin-promise": "^6.0.0",
+    "prettier": "^3.4.2",
+    "lint-staged": "^15.1.0",
+    "ts-node-dev": "^2.0.0"
   },
   "scripts": {
     "dev": "ts-node-dev src/app.ts"
