--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^3.4.2",
+    "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
     "ts-node-dev": "^2.0.0"
   },
