--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-promise": "^6.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.11",
     "prettier": "^3.4.2",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
-    "dev": "ts-node-dev src/app.ts"
+    "dev": "ts-node-dev src/app.ts",
+    "prepare": "husky install"
   }
 }
