--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
-    "dev": "ts-node-dev src/app.ts",
-    "prepare": "husky install"
+    "dev": "ts-node-dev src/server.ts",
+    "prepare": "husky install",
+    "typeorm": "typeorm-ts-node-commonjs"
   }
 }
